--- a/uzx/index.html
+++ b/uzx/index.html
@@ -26,7 +26,7 @@
           </div>
           <div class="col spacer"></div>
           <div class="col">
-            <a href="#" href.new="/uzx/docs" class="btn" title="View the documentation for the UZX Discord bot">Documentation</a>
+            <a href="/uzx/docs" class="btn" title="View the documentation for the UZX Discord bot">Documentation</a>
           </div>
         </div>
       </div>
