--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
     <p>
       It seems like the file you're looking for does not exist.<br/>
       The file might have been moved, or there might be a broken link somewere.<br/>
-      If you're sure that this shoulden't be happening, open a issue <a href="https://github.com/edazpotato/edazpotato.github.io/issues/new">here</a>.
+      If you're sure that this shoulden't be happening, then Dm <code>Edaz#5671</code> on <a href="https://discord.com">discord</a>.
     </p>
     <br/>
     <h3>Try going to the <a href="/">home page</a> and looking for the file again</h3>
