--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
         <div class="row">
           <a class="col" href="https://edazpotato.github.io/redir/discord" aria-label="my Discord server invite link" target="_blank"><img class="black icon high" alt="Discord icon" src="/images/discord.png"></a>
           <a class="col" href="https://edazpotato.github.io/redir/twitter" aria-label="my Twitter profile link" target="_blank"><img class="black icon high" alt="Twitter icon" src="/images/twitter.png"></a>
-          <a class="col" href="https://edazpotato.github.io/redir/youtube" aria-label="my Youtube channel link" target="_blank"><img class="black icon high" alt="Youtube icon" src="/images/youtube.png"></a>   
+          <a class="col" href="https://edazpotato.github.io/redir/youtube" aria-label="my Youtube channel link" target="_blank"><img class="black icon high" alt="Youtube icon" src="/images/youtube.png"></a>
+          <a class="col" href="https://edazpotato.github.io/redir/t-shirt" aria-label="my t-shirt shop link" target="_blank"><img class="black icon high" alt="t-shirt icon" src="/images/shirt.png"></a>
         </div>
         <div class="theme-switch-wrapper">
           <label class="theme-switch" for="checkbox">
