--- a/redir/t-shirt/index.html
+++ b/redir/t-shirt/index.html
@@ -1,1 +1,17 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta http-equiv="refresh" content="2;url=https://edaz.threadless.com/" />
+    <title>Redirecting...</title>
+  <meta name="author" content="EdazPotato">
+  <meta name="description" content="Redirecting...">
+  </head>
+  <body>
+    <p>
+      Redirecting. If you are not redirected, click <a href="https://edaz.threadless.com/">here</a>
+    </p>
+  </body>
+</html>
