--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
         <h1 class="high">Edazpotato</h1>
         <p class="med">I make videos, websites, and other random things</p>
         <div class="row">
-          <a class="col" href="https://edazpotato.github.io/redir/discord" aria-label="my Discord server invite link" target="_blank"><img class="black icon high" alt="Discord icon" src="/images/discord.png"></a>
-          <a class="col" href="https://edazpotato.github.io/redir/twitter" aria-label="my Twitter profile link" target="_blank"><img class="black icon high" alt="Twitter icon" src="/images/twitter.png"></a>
-          <a class="col" href="https://edazpotato.github.io/redir/youtube" aria-label="my Youtube channel link" target="_blank"><img class="black icon high" alt="Youtube icon" src="/images/youtube.png"></a>
-          <a class="col" href="https://edazpotato.github.io/redir/t-shirt" aria-label="my t-shirt shop link" target="_blank"><img class="black icon high" alt="t-shirt icon" src="/images/shirt.png"></a>
+          <a class="col" href="https://edazpotato.github.io/redir/discord" aria-label="my Discord server invite link" title="Join my discord server!" target="_blank"><img class="black icon high" alt="Discord icon" src="/images/discord.png"></a>
+          <a class="col" href="https://edazpotato.github.io/redir/twitter" aria-label="my Twitter profile link" title="Follow me on twitter!" target="_blank"><img class="black icon high" alt="Youtube icon" src="/images/youtube.png"></a>
+          <a class="col" href="https://edazpotato.github.io/redir/t-shirt" aria-label="my t-shirt shop link" title="Buy my t-shirts...?" target="_blank"><img class="black icon high" alt="t-shirt icon" src="/images/shirt.png"></a>
+          <a class="col" href="https://edazpotato.github.io/junk" aria-label="my junk link" title="Browse though my junK! :D" target="_blank"><img class="black icon high" alt="junk icon" src="/images/junk.png"></a>
         </div>
         <div class="theme-switch-wrapper">
           <label class="theme-switch" for="checkbox">
