--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <a href="https://edazpotato.github.io/redir/github"><img class="avatar" alt="github avatar" src="https://github.com/edazpotato.png?size=2048"></a>
         <h1 class="high">Edazpotato</h1>
         <p class="med">I make videos, websites, and other random things</p>
-        <div class="row">
+        <div class="row wrap">
           <a class="col" href="https://edazpotato.github.io/redir/discord" aria-label="my Discord server invite link" title="Join my discord server!" target="_blank"><img class="black icon high" alt="Discord icon" src="/images/discord.png"></a>
           <a class="col" href="https://edazpotato.github.io/redir/twitter" aria-label="my Twitter profile link" title="Follow me on twitter!" target="_blank"><img class="black icon high" alt="Twitter icon" src="/images/twitter.png"></a>
           <a class="col" href="https://edazpotato.github.io/redir/youtube" aria-label="my youtube channel link" title="Subscibe...? ;)" target="_blank"><img class="black icon high" alt="Youtube icon" src="/images/youtube.png"></a>
