--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
         <div class="theme-switch-wrapper">
           <label class="theme-switch" for="checkbox">
-            <input type="checkbox" id="checkbox" aria-label="Toggle dark and light mode switch"/>
+            <input type="checkbox" id="checkbox" aria-label="Toggle dark and light mode switch" title="Toggle light/dark mode"/>
             <div class="slider round"></div>
           </label>
         </div>
