--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- forece https -->
     <script>
       if (window.location.protocol != "https:") {
-          window.location.protocol = "https";
+          window.location.protocol = "https:";
       }
     </script>
     <!-- Note to anyone who wants to make their website look good in a discord website embed(not the type sent by bots/webhooks), check out this tutorial: https://www.reddit.com/r/discordapp/comments/82p8i6/a_basic_tutorial_on_how_to_get_the_most_out_of/ -->
@@ -56,13 +56,13 @@
     <div id="particlesJS"></div>
     <div id="wrapper">
       <div id="content">
-        <a href="https://edazpotato.github.io/redir/github"><img class="avatar" alt="github avatar" src="https://github.com/edazpotato.png?size=2048"></a>
+        <a href="https://edazpotato.github.io/redir/github"><img class="avatar" alt="github avatar" src="https://github.com/edazpotato.png?size=2048" rel="noreferer"></a>
         <h1 class="high">Edazpotato</h1>
         <p class="med">I make videos, websites, and other random things</p>
         <div class="row wrap">
-          <a class="col" href="https://edazpotato.github.io/redir/discord" aria-label="my Discord server invite link" title="Join my discord server!" target="_blank"><img class="black icon high" alt="Discord icon" src="/images/discord.png"></a>
-          <a class="col" href="https://edazpotato.github.io/redir/twitter" aria-label="my Twitter profile link" title="Follow me on twitter!" target="_blank"><img class="black icon high" alt="Twitter icon" src="/images/twitter.png"></a>
-          <a class="col" href="https://edazpotato.github.io/redir/youtube" aria-label="my youtube channel link" title="Subscibe...? ;)" target="_blank"><img class="black icon high" alt="Youtube icon" src="/images/youtube.png"></a>
+          <a class="col" href="https://edazpotato.github.io/redir/discord" aria-label="my Discord server invite link" title="Join my discord server!" target="_blank" rel="noreferer"><img class="black icon high" alt="Discord icon" src="/images/discord.png"></a>
+          <a class="col" href="https://edazpotato.github.io/redir/twitter" aria-label="my Twitter profile link" title="Follow me on twitter!" target="_blank" rel="noreferer"><img class="black icon high" alt="Twitter icon" src="/images/twitter.png"></a>
+          <a class="col" href="https://edazpotato.github.io/redir/youtube" aria-label="my youtube channel link" title="Subscibe...? ;)" target="_blank" rel="noreferer"><img class="black icon high" alt="Youtube icon" src="/images/youtube.png"></a>
         </div>
         <div class="theme-switch-wrapper">
           <label class="theme-switch" for="checkbox">
@@ -72,7 +72,7 @@
         </div>
       </div>
       <p class="secret-text">
-            Design "borrowed" from <a href="https://i-love.pink" target="_blank" aria-label="Original design/layout of this webpage link">Ravy</a>.
+            Design "borrowed" from <a href="https://i-love.pink" target="_blank" aria-label="Original design/layout of this webpage link" rel="noreferer">Ravy</a>.
       </p>
     </div>
     <div id="scripts">
