--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <meta name="charset" content"utf-8">
     
     <!-- particles.js -->
-    <script src="/data-bin/particles.js"></script>
+    <script src="/data-bin/particles.js" defer></script>
     <!-- css -->
     <link rel="stylesheet" href="/data-bin/homepage.css"/>
   </head>
