--- a/email-discord/index.html
+++ b/email-discord/index.html
@@ -40,7 +40,7 @@
           <div class="col cent">
             <div class="col row vert cent" id="google">
 				<div class="col">
-              		<button onclick="googleSignIn()">Sign in with google</button>
+              		<button onclick="googleSignIn()" id="googleBtn">Sign in with google</button>
 				</div>
 				<div class="col" id="googleUserContainer">
 				</div>
@@ -48,7 +48,7 @@
           </div>
           <div class="col row vert cent" id="discord">
 				<div class="col">
-              		<button onclick="discordSignIn()">Sign in with discord</button>
+              		<button onclick="discordSignIn()" id="discordBtn">Sign in with discord</button>
 				</div>
 				<div class="col" id="discordUSerContainer">
 				</div>
