--- a/email-discord/index.html
+++ b/email-discord/index.html
@@ -61,12 +61,13 @@
      </div>
         <!-- FIREBASE -->
         <!-- The core Firebase JS SDK is always required and must be listed first -->
-        <script src="https://www.gstatic.com/firebasejs/7.15.3/firebase-app.js"></script>
+	  <script src="https://www.gstatic.com/firebasejs/7.15.3/firebase-app.js"></script>
 
         <!-- TODO: Add SDKs for Firebase products that you want to use
              https://firebase.google.com/docs/web/setup#available-libraries -->
-        <script src="https://www.gstatic.com/firebasejs/7.15.3/firebase-analytics.js"></script>
+	  <script src="https://www.gstatic.com/firebasejs/7.15.3/firebase-analytics.js"></script>
 	  <script src="https://www.gstatic.com/firebasejs/7.15.3/firebase-auth.js"></script>
+	  <script src="https://www.gstatic.com/firebasejs/7.15.4/firebase-performance.js"></script>
 
         <script>
           // Your web app's Firebase configuration
@@ -80,9 +81,11 @@
             appId: "1:679804190018:web:1f404e283cd81fa8f95cdb",
             measurementId: "G-7BBR6NZYDN"
           };
-          // Initialize Firebase
-          firebase.initializeApp(firebaseConfig);
-          firebase.analytics();
+		// Initialize Firebase
+		firebase.initializeApp(firebaseConfig);
+		// initialize other SDKs
+		firebase.analytics();
+		var perf = firebase.performance();
           
           
         </script>
