--- a/email-discord/index.html
+++ b/email-discord/index.html
@@ -65,8 +65,9 @@
 
         <!-- TODO: Add SDKs for Firebase products that you want to use
              https://firebase.google.com/docs/web/setup#available-libraries -->
-	  <script src="https://www.gstatic.com/firebasejs/7.15.3/firebase-analytics.js"></script>
 	  <script src="https://www.gstatic.com/firebasejs/7.15.3/firebase-auth.js"></script>
+	  <script src="https://www.gstatic.com/firebasejs/7.15.4/firebase-firestore.js"></script>
+	  <script src="https://www.gstatic.com/firebasejs/7.15.3/firebase-analytics.js"></script>
 	  <script src="https://www.gstatic.com/firebasejs/7.15.4/firebase-performance.js"></script>
 
         <script>
