--- a/email-discord/index.html
+++ b/email-discord/index.html
@@ -40,7 +40,7 @@
           <div class="col cent">
             <div class="col row vert cent" id="google">
 				<div class="col">
-              		<button onclick="googleSignIn()" id="googleBtn">Sign in with google</button>
+              		<button onclick="googleSignIn()" id="googleBtn" style="display: none;">Sign in with google</button>
 				</div>
 				<div class="col" id="googleUserContainer">
 				</div>
