--- a/email-discord/index.html
+++ b/email-discord/index.html
@@ -53,6 +53,10 @@
 	    </div>
 	  </div>
 	  <div class="scripts">
+		  <!-- Vue.js -->
+		  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+		  <!-- end Vue.js -->
+		  
 		  <!-- FIREBASE -->
 		  <!-- The core Firebase JS SDK is always required and must be listed first -->
 		  <script src="https://www.gstatic.com/firebasejs/7.15.3/firebase-app.js"></script>
