--- a/email-discord/index.html
+++ b/email-discord/index.html
@@ -36,7 +36,7 @@
   <body>
     <div class="row vert spaced">
 	    <div class="col">
-		    <div class="col cent row vert">
+		    <div class="col cent row vert" id="app">{{ message }}
 			    <div class="col row vert cent" id="google">
 				    <div class="col">
 					    <button onclick="googleSignIn()" id="googleBtn" style="display: none;">Sign in with google</button>
@@ -55,6 +55,14 @@
 	  <div class="scripts">
 		  <!-- Vue.js -->
 		  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+		  <script>
+			  var app = new Vue({
+			  el: '#app',
+			  data: {
+			    message: 'Hello Vue!'
+			  }
+			})
+		  </script>
 		  <!-- end Vue.js -->
 		  
 		  <!-- FIREBASE -->
