--- a/email-discord/index.html
+++ b/email-discord/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- Discord website embed -->
+    <meta name="theme-color" content="#FFC0CB">
+    <!-- normal meta tags -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1">
