--- a/email-discord/index.html
+++ b/email-discord/index.html
@@ -60,8 +60,8 @@
 		  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 		  <script>
 			  Vue.component("social-container", {
-				  propr: [],
-				  template : ""
+				  propr: [provider],
+				  template : '<div class="col row vert cent" id="{{ provider }}"><div class="col"><button onclick="{{ provider }}SignIn()" id="{{ provider }}Btn">Sign in with {{ provider }}</button></div><div class="col" id="{{ provider }}USerContainer"></div></div>'
 			  });
 			  var app = new Vue({
 			  el: '#app',
