--- a/email-discord/index.html
+++ b/email-discord/index.html
@@ -40,6 +40,9 @@
     <div class="row vert spaced">
 	    <div class="col">
 		    <div class="col cent row vert" id="app">
+			    <social-contaier provider="google"></social-container>
+			    <social-contaier provider="discord"></social-container>
+			    <!--
 			    <div class="col row vert cent" id="google">
 				    <div class="col">
 					    <button onclick="googleSignIn()" id="googleBtn" style="display: none;">Sign in with google</button>
@@ -52,6 +55,7 @@
 				    </div>
 				    <div class="col" id="discordUSerContainer"></div>
 			    </div>
+-->
 		    </div>
 	    </div>
 	  </div>
