--- a/email-discord/index.html
+++ b/email-discord/index.html
@@ -68,10 +68,7 @@
 				  template : '<div class="col row vert cent" id="{{ provider }}"><div class="col"><button onclick="{{ provider }}SignIn()" id="{{ provider }}Btn">Sign in with {{ provider }}</button></div><div class="col" id="{{ provider }}USerContainer"></div></div>'
 			  });
 			  var vm = new Vue({
-			  el: '#app',
-			  data: {
-			    message: 'Hello world!'
-			  }
+			  el: '#app'
 			});
 		  </script>
 		  <!-- end Vue.js -->
