--- a/email-discord/index.html
+++ b/email-discord/index.html
@@ -40,8 +40,8 @@
     <div class="row vert spaced">
 	    <div class="col">
 		    <div class="col cent row vert" id="app">
-			    <social-contaier provider="google"></social-container>
-			    <social-contaier provider="discord"></social-container>
+			    <social-container provider="google"></social-container>
+			    <social-container provider="discord"></social-container>
 			    <!--
 			    <div class="col row vert cent" id="google">
 				    <div class="col">
