--- a/email-discord/index.html
+++ b/email-discord/index.html
@@ -41,7 +41,7 @@
 	    <div class="col">
 		    <div class="col cent row vert" id="app">
 			    <social-container provider="google" class="hidden"></social-container>
-			    <social-container provider="discord"> class=""</social-container>
+			    <social-container provider="discord"  class=""></social-container>
 			    <!--
 			    <div class="col row vert cent" id="google">
 				    <div class="col">
