--- a/email-discord/index.html
+++ b/email-discord/index.html
@@ -65,7 +65,7 @@
 		  <script>
 			  Vue.component("social-container", {
 				  props: ["provider", "btnClass"],
-				  template : '<div class="col row vert cent" :id="provider"><div class="col"><button :class="btnClass" :onclick="provider + \'SignIn()\'" id="provider + \'Btn\'">Sign in with {{ provider }}</button></div><div class="col" :id="provider + \'USerContainer\'"></div></div>'
+				  template : '<div class="col row vert cent" :id="provider"><div class="col"><button :class="btnClass" :onclick="provider + \'SignIn()\'" :id="provider + \'Btn\'">Sign in with {{ provider }}</button></div><div class="col" :id="provider + \'USerContainer\'"></div></div>'
 			  });
 			  var vm = new Vue({
 			  el: '#app'
