--- a/email-discord/index.html
+++ b/email-discord/index.html
@@ -40,8 +40,8 @@
     <div class="row vert spaced">
 	    <div class="col">
 		    <div class="col cent row vert" id="app">
-			    <social-container provider="google" class="hidden"></social-container>
-			    <social-container provider="discord"  class=""></social-container>
+			    <social-container provider="google" btnClass="hidden"></social-container>
+			    <social-container provider="discord"  btnClass=""></social-container>
 			    <!--
 			    <div class="col row vert cent" id="google">
 				    <div class="col">
