--- a/email-discord/index.html
+++ b/email-discord/index.html
@@ -75,7 +75,8 @@
 				  template : '<div class="col row vert cent" :id="provider"><div class="col"><button :class="btnclass" :onclick="provider + \'SignIn()\'" :id="provider + \'Btn\'">Sign in with {{ provider }}</button></div><div class="col" :id="provider + \'UserContainer\'"></div></div>'
 			  });
 			  var vm = new Vue({
-			  	el: '#app'
+			  	el: '#app',
+      				vuetify: new Vuetify()
 			  });
 		  </script>
 		  <!-- end Vue.js -->
