--- a/email-discord/index.html
+++ b/email-discord/index.html
@@ -14,57 +14,45 @@
     <link rel="stylesheet" href="basic-grid.css" type="text/css">
     <!-- vuetify -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
-	  <link href="https://cdn.jsdelivr.net/npm/@mdi/font@5.x/css/materialdesignicons.min.css" rel="stylesheet">
-	  <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
-    <style type="text/css">
-      .centertext {
-        text-align: center;
-      }
-      .scripts {
-        display: none;
-      }
-      a {
-        font-size: 5vh;
-        text-decoration: none;
-        color: #1dc2d1;
-        border-bottom: 1vh dotted white;
-        transition: border 1s, color 1s;
-      }
-      a:hover, a:focus {
-        color: #1d71d1;
-        border-bottom: 1vh dotted #1d71d1;
-      }
-      a:active {
-        color: #1dd171;
-        border-bottom: 1vh dotted #1dd171;
-      }
-    </style>
+    <link href="https://cdn.jsdelivr.net/npm/@mdi/font@5.x/css/materialdesignicons.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
   </head>
   <body>
-    <div class="row vert spaced">
-	    <div class="col">
-		    <div class="col cent row vert" id="app">
-			    <v-app>
-				    <social-container provider="google" btnclass="hidden"></social-container>
-				    <social-container provider="discord"  btnclass="shown"></social-container>
-				    <!--
-				    <div class="col row vert cent" id="google">
-					    <div class="col">
-						    <button onclick="googleSignIn()" id="googleBtn" style="display: none;">Sign in with google</button>
-					    </div>
-					    <div class="col" id="googleUserContainer"></div>
-				    </div>
-				    <div class="col row vert cent" id="discord">
-					    <div class="col">
-						    <button onclick="discordSignIn()" id="discordBtn">Sign in with discord</button>
-					    </div>
-					    <div class="col" id="discordUSerContainer"></div>
-				    </div>
-	-->
-			    </v-app>
-		    </div>
-	    </div>
-	  </div>
+	  <v-app>
+	    <v-main>
+	      <v-container
+		class="fill-height"
+		fluid
+	      >
+		<v-row
+		  align="center"
+		  justify="center"
+		>
+		  <v-col
+		    cols="12"
+		    sm="8"
+		    md="4"
+		  >
+		    <v-card class="elevation-12">
+		      <v-toolbar
+			color="primary"
+			dark
+			flat
+		      >
+			<v-toolbar-title>Email-discord</v-toolbar-title>
+			<v-spacer></v-spacer>
+		      </v-toolbar>
+		      <v-card-actions>
+			<v-spacer></v-spacer>
+			<social-container provider="google" btnclass="hidden"></social-container>
+			<social-container provider="discord" btnclass="shown"></social-container>
+		      </v-card-actions>
+		    </v-card>
+		  </v-col>
+		</v-row>
+	      </v-container>
+	    </v-main>
+	  </v-app>
 	  <div class="scripts">
 		  <!-- Vue.js -->
 		  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
@@ -72,7 +60,7 @@
 		  <script>
 			  Vue.component("social-container", {
 				  props: ["provider", "btnclass"],
-				  template : '<div class="col row vert cent" :id="provider"><div class="col"><button :class="btnclass" :onclick="provider + \'SignIn()\'" :id="provider + \'Btn\'">Sign in with {{ provider }}</button></div><div class="col" :id="provider + \'UserContainer\'"></div></div>'
+				  template : '<div :id="provider"><button :class="btnclass" :onclick="provider + \'SignIn()\'" :id="provider + \'Btn\'">Sign in with {{ provider }}</button><div :id="provider + \'UserContainer\'"></div></div>'
 			  });
 			  var vm = new Vue({
 			  	el: '#app',
