--- a/email-discord/index.html
+++ b/email-discord/index.html
@@ -18,7 +18,7 @@
     <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
   </head>
   <body>
-	  <v-app>
+	  <v-app id="app">
 	    <v-main>
 	      <v-container
 		class="fill-height"
