--- a/email-discord/index.html
+++ b/email-discord/index.html
@@ -44,8 +44,8 @@
 		      </v-toolbar>
 		      <v-card-actions>
 			<v-spacer></v-spacer>
-			<social-container provider="google" btnclass="hidden"></social-container>
-			<social-container provider="discord" btnclass="shown"></social-container>
+			<social-container provider="google" disabled="true"></social-container>
+			<social-container provider="discord" disabled="false"></social-container>
 		      </v-card-actions>
 		    </v-card>
 		  </v-col>
