--- a/email-discord/index.html
+++ b/email-discord/index.html
@@ -44,7 +44,6 @@
 		      </v-toolbar>
 		      <v-card-actions>
 			<social-container provider="google" disabled="true"></social-container>
-			<v-spacer></v-spacer>
 			<social-container provider="discord" disabled="false"></social-container>
 		      </v-card-actions>
 		    </v-card>
@@ -60,7 +59,7 @@
 		  <script>
 			  Vue.component("social-container", {
 				  props: ["provider", "disabled"],
-				  template : '<div :id="provider"><v-btn :disabled="!!disabled" class="white--text v-btn v-btn--tile theme--light elevation-3 secondary" small :onclick="provider + \'SignIn()\'" :id="provider + \'Btn\'">Sign in with {{ provider }}</button><div :id="provider + \'UserContainer\'"></div></div>'
+				  template : '<div :id="provider"><v-btn :disabled="disabled" class="white--text v-btn v-btn--tile theme--light elevation-3 secondary" small="true" :onclick="provider + \'SignIn()\'" :id="provider + \'Btn\'">Sign in with {{ provider }}</button><div :id="provider + \'UserContainer\'"></div></div>'
 			  });
 			  var vm = new Vue({
 			  	el: '#app',
