--- a/email-discord/index.html
+++ b/email-discord/index.html
@@ -67,7 +67,7 @@
 		  <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
 		  <script>
 			  Vue.component("social-container", {
-				  props: ["provider", "disabled"],
+				  props: ["provider", "disable"],
 				  template : '<div :id="provider"><v-btn :disabled="disable" class="white--text v-btn v-btn--tile theme--light elevation-3 secondary" small="true" :onclick="provider + \'SignIn()\'" :id="provider + \'Btn\'">Sign in with {{ provider }}</button><div :id="provider + \'UserContainer\'"></div></div>'
 			  });
 			  var vm = new Vue({
