--- a/email-discord/index.html
+++ b/email-discord/index.html
@@ -48,10 +48,10 @@
 				justify="center"
 			>
 				<v-col>
-				  <social-container provider="discord" disable="false"></social-container>
+				  <social-container provider="discord"></social-container>
 				</v-col>
 				<v-col>
-				  <social-container provider="google" disable="true"></social-container>
+				  <social-container provider="google" disable></social-container>
 				</v-col>
 			</v-row>
 		      </v-card-actions>
