--- a/email-discord/index.html
+++ b/email-discord/index.html
@@ -47,10 +47,18 @@
 				align="center"
 				justify="center"
 			>
-				<v-col>
+				<v-col 
+				    cols="12"
+				    sm="8"
+				    md="4"
+				>
 				  <social-container provider="discord"></social-container>
 				</v-col>
-				<v-col>
+				<v-col 
+				    cols="12"
+				    sm="8"
+				    md="4"
+				>
 				  <social-container provider="google" disable></social-container>
 				</v-col>
 			</v-row>
