--- a/email-discord/index.html
+++ b/email-discord/index.html
@@ -48,12 +48,14 @@
 				justify="center"
 			>
 				<v-col 
+				    cols="12"
 				    sm="8"
 				    md="4"
 				>
 				  <social-container provider="discord"></social-container>
 				</v-col>
 				<v-col 
+				    cols="12"
 				    sm="8"
 				    md="4"
 				>
