--- a/email-discord/index.html
+++ b/email-discord/index.html
@@ -54,6 +54,7 @@
 				>
 				  <social-container provider="discord"></social-container>
 				</v-col>
+				<v-spacer></v-spacer>
 				<v-col 
 				    cols="12"
 				    sm="8"
