--- a/uzx/index.html
+++ b/uzx/index.html
@@ -31,5 +31,6 @@
         </div>
       </div>
     </div>
+    <script src="https://yly9drz8dt5f.statuspage.io/embed/script.js"></script>
   </body>
 </html>
