--- a/uzx/index.html
+++ b/uzx/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!-- meta tags that acctuly effect the content of the page -->
+    <!-- metadata -->
     <meta name="viewport" property="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="charset" property="charset" content"utf-8">
+    <title>UZX</title>
+    
+    <!-- stylesheets -->
     <link rel="stylesheet" type="text/css" href="uzx-home.css"/>
     <link rel="stylesheet" type="text/css" href="basic-grid.css"/>
   </head>
@@ -27,6 +30,10 @@
           <div class="col spacer"></div>
           <div class="col">
             <a href="/uzx/docs" class="btn" title="View the documentation for the UZX Discord bot">Documentation</a>
+          </div>
+          <div class="col spacer"></div>
+          <div class="col">
+            <a href="https://uzx.statuspage.io/" class="btn" title="View the current status and incident history for UZX">Status</a>
           </div>
         </div>
       </div>
