--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
         }
         toggleSwitch.addEventListener('change', switchTheme, false);
       </script>
+      <script src="https://cdn.jsdelivr.net/gh/edazpotato/cookie-consent@latest/cookie-consent.js"></script>
+
     </div>
   </body>
 </html>
