--- a/uzx/index.html
+++ b/uzx/index.html
@@ -15,7 +15,7 @@
       <div class="col">
         <div class="row vert">
           <div class="col">
-            <h1>UZX</h1>
+            <h1 title="Ultra Zesty Xenoblast ">UZX</h1>
           </div>
           <div class="col">
             <h3>The Discord bot you waited for</h3>
