--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- forece https -->
-    <script>
-      if (window.location.protocol != "https:") {
-          window.location.protocol = "https:";
-      }
+    <!-- ads -->
+    <script type="text/javascript">
+      window._mNHandle = window._mNHandle || {};
+      window._mNHandle.queue = window._mNHandle.queue || [];
+      medianet_versionId = "3121199";
     </script>
-    <!-- google adsence -->
-    <script data-ad-client="ca-pub-7797834016038190" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script src="https://contextual.media.net/dmedianet.js?cid=8CUJ63447" async="async"></script>
     <!-- Note to anyone who wants to make their website look good in a discord website embed(not the type sent by bots/webhooks), check out this tutorial: https://www.reddit.com/r/discordapp/comments/82p8i6/a_basic_tutorial_on_how_to_get_the_most_out_of/ -->
     <!-- meta tags -->
     <title>Edazpotato!</title>
