replace google ads with media.net

--- a/index.html
+++ b/index.html
@@ -75,6 +75,16 @@
       <p class="secret-text">
             Design "borrowed" from <a href="https://i-love.pink" target="_blank" aria-label="Original design/layout of this webpage link" rel="noreferer">Ravy</a>.
       </p>
+      <div id="657421181">
+        <script type="text/javascript">
+            try {
+                window._mNHandle.queue.push(function (){
+                    window._mNDetails.loadTag("657421181", "300x250", "657421181");
+                });
+            }
+            catch (error) {}
+        </script>
+    </div>
     </div>
     <div id="scripts">
       <script>
@@ -101,7 +111,7 @@
         }
         toggleSwitch.addEventListener('change', switchTheme, false);
       </script>
-      <script src="https://cdn.jsdelivr.net/gh/edazpotato/cookie-consent@latest/cookie-consent.js"></script>
+      <!-- temportaily dissabled <script src="https://cdn.jsdelivr.net/gh/edazpotato/cookie-consent@latest/cookie-consent.js"></script>-->
 
     </div>
   </body>
