--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
       <p class="secret-text">
             Design "borrowed" from <a href="https://i-love.pink" target="_blank" aria-label="Original design/layout of this webpage link" rel="noreferer">Ravy</a>.
       </p>
+      <!-- ads -->
+      <!-- i'm sorry hat I have to have ads, but it costs money to host UZX -->
       <div id="657421181">
         <script type="text/javascript">
             try {
