--- a/uzx/index.html
+++ b/uzx/index.html
@@ -33,6 +33,10 @@
           </div>
           <div class="col spacer"></div>
           <div class="col">
+            <a href="https://top.gg/bot/712195162532479008/vote" class="btn" title="Vote for UZX">Vote</a>
+          </div>
+          <div class="col spacer"></div>
+          <div class="col">
             <a href="https://uzx.statuspage.io/" class="btn" title="View the current status and incident history for UZX">Status</a>
           </div>
         </div>
