--- a/404.html
+++ b/404.html
@@ -5,15 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Error 404 - File not found!</title>
+    <style>
+      /* setup document */
+      html, body {
+        height: 100%;
+      }
+      
+      /* do all the things */
+      .container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+      }
+      #bottom {
+        justify-self: flex-end;
+      }
+    </style>
   </head>
   <body>
-    <h1>ERROR 404 - File not found!</h1>
-    <br/>
-    <p>
-      It seems like the file you're looking for does not exist.<br/>
-      The file might have been moved, or there might be a broken link somewere.<br/>
-      If you're sure that this shoulden't be happening, then Dm <code>Edaz#5671</code> on <a href="https://discord.com">discord</a>.
-    </p>
-    <br/>
-    <h3>Try going to the <a href="/">home page</a> and looking for the file again</h3>
+    <div class="container">
+      <h1>404</h1><br/>
+      <h6>(that means that something broke!)</h6>
+      <hr/>
+      <p>
+        uh.. so this is kinda embarising (if you're seeing this page then I probably broke a link again).
+        <br/>
+        How about we just go back to the <a href="/">home page</a> and pretend nothing ever happened, OK?
+      </p>
+      <span id="bottom">Or if you want, you could go fix the problem in the <a href="">github repo</a></span>
+    </div>
 </html>
