--- a/404.html
+++ b/404.html
@@ -13,6 +13,7 @@
       
       /* do all the things */
       .container {
+        height: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
