--- a/404.html
+++ b/404.html
@@ -11,7 +11,15 @@
         height: 100%;
       }
       
-      /* do all the things */
+      /* resize stuff */
+      h1 {
+        font-size: 500%;
+      }
+      h6 {
+        font-size: 100%;
+      }
+      
+      /* do all the flexy things! */
       .container {
         height: 100%;
         display: flex;
