aaaee! flexbox is anoying sometimes

--- a/404.html
+++ b/404.html
@@ -33,9 +33,11 @@
       }
       .bottom {
         justify-self: flex-end;
+        margin-top: auto;
       }
       .top {
         justify-self: flex-start;
+        margin-bottom: auto;
       }
     </style>
   </head>
