--- a/404.html
+++ b/404.html
@@ -7,6 +7,11 @@
     <title>Error 404 - File not found!</title>
     <style>
       /* setup document */
+      * {
+        margin: 0;
+        padding: 0;
+        border: 0;
+      }
       html, body {
         height: 100%;
       }
