--- a/404.html
+++ b/404.html
@@ -1,16 +1,10 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Error 404 - File not found!</title>
-    <style>
+
       /* setup document */
       * {
         margin: 0;
         padding: 0;
         border: 0;
+        text-align: center;
       }
       html, body {
         height: 100%;
@@ -24,9 +18,18 @@
       /* resize stuff */
       h1 {
         font-size: 500%;
+        margin: 10%;
+        margin-bottom: 4%;
       }
       h6 {
-        font-size: 100%;
+        font-size: 90%;
+        margin: 3%;
+      }
+      p {
+        padding: 4%;
+      }
+      span {
+        padding: 4%;
       }
       
       /* do all the flexy things! */
@@ -35,6 +38,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        flex-wrap: wrap;
       }
       .bottom {
         justify-self: flex-end;
@@ -44,20 +48,4 @@
         justify-self: flex-start;
         margin-bottom: auto;
       }
-    </style>
-  </head>
-  <body>
-    <div class="container tall">
-      <div class="container top">
-        <h1>404</h1><br/>
-        <h6>(that means that something broke!)</h6>
-        <hr/>
-        <p>
-          uh.. so this is kinda embarising (if you're seeing this page then I probably broke a link again).
-          <br/>
-          How about we just go back to the <a href="/">home page</a> and pretend nothing ever happened, OK?
-        </p>
-      </div>
-      <span class="bottom">Or if you want, you could go fix the problem in the <a href="">github repo</a></span>
-    </div>
-</html>
+    
