--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
     <div id="particlesJS"></div>
     <div id="wrapper">
       <div id="content">
-        <a href="https://edazpotato.github.io/redir/github"><img class="avatar" alt="github avatar" src="https://github.com/edazpotato.png?size=2048" rel="noreferer"></a>
+        <a href="https://edazpotato.github.io/redir/github" title="Check out my code on github!"><img class="avatar" alt="github avatar" src="https://github.com/edazpotato.png?size=2048" rel="noreferer"></a>
         <h1 class="high">Edazpotato</h1>
         <p class="med">I make videos, websites, and other random things</p>
         <div class="row wrap">
           <a class="col" href="https://edazpotato.github.io/redir/discord" aria-label="my Discord server invite link" title="Join my discord server!" target="_blank" rel="noreferer"><img class="black icon high" alt="Discord icon" src="/images/discord.png"></a>
           <a class="col" href="https://edazpotato.github.io/redir/twitter" aria-label="my Twitter profile link" title="Follow me on twitter!" target="_blank" rel="noreferer"><img class="black icon high" alt="Twitter icon" src="/images/twitter.png"></a>
-          <a class="col" href="https://edazpotato.github.io/redir/youtube" aria-label="my youtube channel link" title="Subscibe...? ;)" target="_blank" rel="noreferer"><img class="black icon high" alt="Youtube icon" src="/images/youtube.png"></a>
+          <a class="col" href="https://edazpotato.github.io/redir/youtube" aria-label="my youtube channel link" title="Subscibe to mah youtube channel" target="_blank" rel="noreferer"><img class="black icon high" alt="Youtube icon" src="/images/youtube.png"></a>
         </div>
         <div class="theme-switch-wrapper">
           <label class="theme-switch" for="checkbox">
