--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       medianet_versionId = "3121199";
     </script>
     <script src="https://contextual.media.net/dmedianet.js?cid=8CUJ63447" async="async"></script>
+    <!-- end ads -->
     <!-- Note to anyone who wants to make their website look good in a discord website embed(not the type sent by bots/webhooks), check out this tutorial: https://www.reddit.com/r/discordapp/comments/82p8i6/a_basic_tutorial_on_how_to_get_the_most_out_of/ -->
     <!-- meta tags -->
     <title>Edazpotato!</title>
