--- a/404.html
+++ b/404.html
@@ -70,7 +70,7 @@
             How about we just go back to the <a href="/">home page</a> and pretend nothing ever happened, OK?
             </p>
             </div>
-            <span class="bottom">Or if you want, you could go fix the problem in the <a href="">github repo</a></span>
+            <span class="bottom">Or if you want, you could go fix the problem in the <a href="github.com/edazpotato/edazpotato.github.io">github repo</a></span>
             </div>
       </body>
 </html>
