Update meta tags

--- a/uzx/index.html
+++ b/uzx/index.html
@@ -4,7 +4,25 @@
     <!-- metadata -->
     <meta name="viewport" property="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="charset" property="charset" content"utf-8">
-    <title>UZX</title>
+    <!-- Primary Meta Tags -->
+    <title>UZX - The discord bot you waited for!</title>
+    <meta name="title" content="UZX - The discord bot you waited for!">
+    <meta name="description" content="UZX is the Discord bot you've been waiting for. Featuring jokes, memes, Minecraft, moderation and more, you'll never want another bot after UZX (in a good way)">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://edaz.codes/uzx/">
+    <meta property="og:title" content="UZX - The discord bot you waited for!">
+    <meta property="og:description" content="UZX is the Discord bot you've been waiting for. Featuring jokes, memes, Minecraft, moderation and more, you'll never want another bot after UZX (in a good way)">
+    <meta property="og:image" content="https://edaz.codes/uzx/uzx.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://edaz.codes/uzx/">
+    <meta property="twitter:title" content="UZX - The discord bot you waited for!">
+    <meta property="twitter:description" content="UZX is the Discord bot you've been waiting for. Featuring jokes, memes, Minecraft, moderation and more, you'll never want another bot after UZX (in a good way)">
+    <meta property="twitter:image" content="https://edaz.codes/uzx/uzx.png">
+
     
     <!-- stylesheets -->
     <link rel="stylesheet" type="text/css" href="uzx-home.css"/>
