add color meta tag

--- a/uzx/index.html
+++ b/uzx/index.html
@@ -8,7 +8,8 @@
     <title>UZX - The discord bot you waited for!</title>
     <meta name="title" content="UZX - The discord bot you waited for!">
     <meta name="description" content="UZX is the Discord bot you've been waiting for. Featuring jokes, memes, Minecraft, moderation and more, you'll never want another bot after UZX (in a good way)">
-
+    <meta name="theme-color" content="#0d7eff">
+    
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://edaz.codes/uzx/">
