--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <link rel="apple-touch-startup-image" href="/data-bin/apple-startup-icon.png">
     <link rel="apple-touch-icon" href="/data-bin/apple-touch-icon.png">
     <!-- Open Graph / Facebook -->
+    <meta property="og:site_name" content="edaz.codes" />
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://edazpotato.github.io">
     <meta property="og:title" content="Edazpotato's Official website! No Scam! 100% Safe! No virus or IP log!">
