--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <link rel="apple-touch-startup-image" href="/data-bin/apple-startup-icon.png">
     <link rel="apple-touch-icon" href="/data-bin/apple-touch-icon.png">
     <!-- Open Graph / Facebook -->
-    <meta property="og:site_name" content="edaz.codes" />
+    <meta property="og:site_name" content="edazpotato.github.io" />
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://edazpotato.github.io">
     <meta property="og:title" content="Edazpotato's Official website! No Scam! 100% Safe! No virus or IP log!">
@@ -46,6 +46,25 @@
     <meta property="twitter:title" content="Edazpotato's Official website! No Scam! 100% Safe! No virus or IP log!">
     <meta property="twitter:description" content="Edazpotato's official website! This is where I'll host all of my junk and test out things and stuff. Follow me on twitter @Edazpotato">
     <meta property="twitter:image" content="https://edazpotato.github.io/images/lightsaber.png">
+    <!-- recipie for pintrest rich pin -->
+    <div itemscope itemtype="http://schema.org/Recipe">
+        <h1 itemprop="name">High quality website</h1>
+        <meta itemprop="url" content="https://edazpotato.github.io/" />
+        <span itemprop="totalTime">Far too long</span>
+        <span itemprop="recipeYield">Serves as many as your web server can handle</span>
+        Ingredients:
+            <span itemprop="ingredients">1 Borded developer</span>,
+            <span itemprop="ingredients">2 much free time</span>,
+            <span itemprop="ingredients">1 decent web server (github pages will do)</span>,
+            <span itemprop="ingredients">1 swish domain</span>,
+            <span itemprop="ingredients">1 DNS service (I recomend cloudflare)</span>
+            <span itemprop="ingredients">500 better things to do</span>
+            <span itemprop="ingredients">1 tomato</span>
+        <div itemprop="aggregateRating" itemscope itemtype="http://schema.org/AggregateRating">
+        Rated <span itemprop="ratingValue">-5</span>/5
+        based on <span itemprop="reviewCount">no</span> customer reviews
+        </div>
+    </div>
     <!-- meta tags that acctuly effect the content of the page -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="charset" content"utf-8">
