--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         <meta itemprop="url" content="https://edazpotato.github.io/" />
         <span itemprop="totalTime">Far too long</span>
         <span itemprop="recipeYield">Serves as many as your web server can handle</span>
+        <span itemprop="cookTime">730 hours</span>
         Ingredients:
             <span itemprop="ingredients">1 Borded developer</span>,
             <span itemprop="ingredients">2 much free time</span>,
@@ -61,8 +62,8 @@
             <span itemprop="ingredients">500 better things to do</span>
             <span itemprop="ingredients">1 tomato</span>
         <div itemprop="aggregateRating" itemscope itemtype="http://schema.org/AggregateRating">
-        Rated <span itemprop="ratingValue">-5</span>/5
-        based on <span itemprop="reviewCount">no</span> customer reviews
+          Rated <span itemprop="ratingValue">-5</span>/5
+          based on <span itemprop="reviewCount">5</span> customer reviews
         </div>
     </div>
     <!-- meta tags that acctuly effect the content of the page -->
