--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <h1 itemprop="name">High quality website</h1>
         <meta itemprop="url" content="https://edazpotato.github.io/" />
         <span itemprop="totalTime">Far too long</span>
-        <span itemprop="recipeYield">Serves as many as your web server can handle</span>
+        <span itemprop="recipeYield">Serves 1</span>
         <span itemprop="cookTime">730 hours</span>
         Ingredients:
             <span itemprop="ingredients">1 Borded developer</span>,
